tests/Driver/no-input.sora
// RUN: %sorac | %filecheck %s
// CHECK: error: no input file